--- a/rro_overlays/FrameworksResCupid/res/values/evolution_config.xml
+++ b/rro_overlays/FrameworksResCupid/res/values/evolution_config.xml
@@ -38,6 +38,9 @@
     <!-- Whether device supports in-display fingerprint -->
     <bool name="config_supportsUdfps">true</bool>
 
+    <!-- Whether devices suports in-display fingerprint when screen is off -->
+    <bool name="config_supportsScreenOffUdfps">true</bool>
+
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">false</bool>
 
