--- a/rro_overlays/SystemUIResCupid/res/values/config.xml
+++ b/rro_overlays/SystemUIResCupid/res/values/config.xml
@@ -11,13 +11,12 @@
     <string name="config_rounded_mask" translatable="false">M144,0c-7.8,0.7-15.6,1.3-23.3,2.1C98.4,4.2,76.9,8.8,57.5,20.4C29.6,37.2,14.3,63,7.3,93.8C4,108.1,2,130.4,0,144</string>
 
     <!-- Doze: does this device support STATE_DOZE?  -->
-    <bool name="doze_display_state_supported">false</bool>
+    <bool name="doze_display_state_supported">true</bool>
 
     <!-- Preferred refresh rate at keyguard, if supported by the display. Overrides
          keyguardMaxRefreshRate. -->
     <integer name="config_keyguardRefreshRate">60</integer>
 
-    <!-- StatusBar Burn-in protection -->
-    <bool name="config_statusBarBurnInProtection">true</bool>
-    <integer name="config_shift_interval">40</integer>
+    <!-- Preferred max refresh rate at keyguard, if supported by the display. -->
+    <integer name="config_keyguardMaxRefreshRate">60</integer>
 </resources>
