cupid: overlay: enable doze suspend and update maintainer details

--- a/rro_overlays/SettingsResCupid/res/values/evolution_strings.xml
+++ b/rro_overlays/SettingsResCupid/res/values/evolution_strings.xml
@@ -18,5 +18,5 @@
 
     <!-- About build maintainer -->
     <string name="build_maintainer_summary">Yarpiin</string>
-
+    <string name="build_maintainer_donate_url" translatable="false">https://www.paypal.com/paypalme/yarpiin</string>
 </resources>
